KUP-20 Fix overflowing style in Button

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,9 +1,9 @@
-button:disabled,
-button[disabled] {
+button.kupaliska-button:disabled,
+button.kupaliska-button[disabled] {
   opacity: 0.3;
   cursor: initial;
 }
 
-button:active {
+button.kupaliska-button:active {
   background-color: theme("colors.secondary");
 }
